add latest talk

--- a/404.html
+++ b/404.html
@@ -374,6 +374,10 @@
   <h2>Talks</h2>
   
   <ul>
+    <li><a href="/talk/big2018/">MiRNA Wars: The isomiRs menance</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/talk/bosc2018/">miRTOP: An open source community project for the development of a unified format file for miRNA data</a></li>
   </ul>
   
