--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
     
     <div class="featurette-icon"><i class="fab fa-r-project"></i></div>
     
-    <h3>R</h3>
+    <h3>R/Rshiny</h3>
     <p>100%</p>
   </div>
   
