Update from https://github.com/lpantano/myself/commit/4983a894826de3112698ae9a45573b9f9d1175ba

--- a/index.html
+++ b/index.html
@@ -1259,7 +1259,7 @@
 <li>Leading R&amp;D pipelines with computational strategies</li>
 <li>Analysing genomic/metabolimic/transcriptomic data</li>
 <li>Leading visualization plarform to boost biological interpretation</li>
-<li>Developing bioinformatic infrastructure to ensure reproducibility</li>
+<li>Developing bioinformatic infrastructure to ensure reproducibility and scalability</li>
 <li>Senior Manager and Mentor</li>
 </ul>
 </div>
