Update from https://github.com/lpantano/myself/commit/4a5d58e88f24de010bded9aef47c433b046e7c32

--- a/project/training/index.html
+++ b/project/training/index.html
@@ -843,7 +843,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="https://lpantano.shinyapps.io/Lopantano-Run-Data/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://run-training-activities.netlify.app" target="_blank" rel="noopener">
   Slides
 </a>
 
@@ -871,8 +871,8 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>Visit <a href="https://lpantano.shinyapps.io/Lopantano-Run-Data/" target="_blank" rel="noopener">App</a>.</p>
-<p>This project, developed using RShiny and data from Apple’s Health app, emphasizes the importance of personal data ownership and management. I believe individuals should have control over their own data, rather than it being dictated by app limitations or leveraged by large corporations. They advocate for apps to offer data export options in standardized formats, empowering users to make informed decisions and analyze their data independently. This example demonstrates my own training progress, showing adaptations in speed, distance, time and heart rate, with plans to correlate with broader health insights. For further information, feel free to reach out.</p>
+      <p>Visit <a href="https://run-training-activities.netlify.app" target="_blank" rel="noopener">App</a>.</p>
+<p>This project, developed using react.js and data from Apple’s Health app and Garmin Connect app, emphasizes the importance of personal data ownership and management. I believe individuals should have control over their own data, rather than it being dictated by app limitations or leveraged by large corporations. They advocate for apps to offer data export options in standardized formats, empowering users to make informed decisions and analyze their data independently. This example demonstrates my own training progress, showing adaptations in speed, distance, time and heart rate, with plans to correlate with broader health insights. For further information, feel free to reach out.</p>
 
     </div>
 
