Update from https://github.com/lpantano/myself/commit/54aa6e16bcc2f454f2a093ca1e35c81de3229f3d

--- a/publication/llorens-2013/index.html
+++ b/publication/llorens-2013/index.html
@@ -1046,7 +1046,7 @@
   
   <a class="badge badge-light" href="/tag/humans/">Humans</a>
   
-  <a class="badge badge-light" href="/tag/micrornas/">MicroRNAs</a>
+  <a class="badge badge-light" href="/tag/micrornas/">Micrornas</a>
   
   <a class="badge badge-light" href="/tag/micrornas-genetics/">MicroRNAs: Genetics</a>
   
