--- a/publication/pantano-2010/index.html
+++ b/publication/pantano-2010/index.html
@@ -1018,7 +1018,7 @@
   
   <a class="badge badge-light" href="/tag/humans/">Humans</a>
   
-  <a class="badge badge-light" href="/tag/micrornas/">MicroRNAs</a>
+  <a class="badge badge-light" href="/tag/micrornas/">Micrornas</a>
   
   <a class="badge badge-light" href="/tag/micrornas-chemistry/">Micrornas Chemistry</a>
   
