--- a/publication/pantano-2011/index.html
+++ b/publication/pantano-2011/index.html
@@ -1012,7 +1012,7 @@
   
   <a class="badge badge-light" href="/tag/mice/">Mice</a>
   
-  <a class="badge badge-light" href="/tag/micrornas/">MicroRNAs</a>
+  <a class="badge badge-light" href="/tag/micrornas/">Micrornas</a>
   
   <a class="badge badge-light" href="/tag/micrornas-classification/">MicroRNAs: Classification</a>
   
