--- a/publication/pantano-2015-a/index.html
+++ b/publication/pantano-2015-a/index.html
@@ -1016,7 +1016,7 @@
   
   <a class="badge badge-light" href="/tag/male/">Male</a>
   
-  <a class="badge badge-light" href="/tag/micrornas/">MicroRNAs</a>
+  <a class="badge badge-light" href="/tag/micrornas/">Micrornas</a>
   
   <a class="badge badge-light" href="/tag/micrornas-genetics/">MicroRNAs: Genetics</a>
   
