--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -1483,7 +1483,7 @@
   <span >
       <a href="/author/thomas-desvignes/">Thomas Desvignes</a></span>, <span >
       <a href="/author/phillipe-loher/">Phillipe Loher</a></span>, <span >
-      <a href="/author/karen-eilbeck/">Karen EIlbeck</a></span>, <span >
+      <a href="/author/karen-eilbeck/">Karen Eilbeck</a></span>, <span >
       <a href="/author/jeffery-ma/">Jeffery Ma</a></span>, <span >
       <a href="/author/gianvito-urgese/">Gianvito Urgese</a></span>, <span >
       <a href="/author/bastian-fromm/">Bastian Fromm</a></span>, <span >
