--- a/publication/llorens-2013-a/index.html
+++ b/publication/llorens-2013-a/index.html
@@ -1041,7 +1041,7 @@
   
   <a class="badge badge-light" href="/tag/humans/">Humans</a>
   
-  <a class="badge badge-light" href="/tag/micrornas/">MicroRNAs</a>
+  <a class="badge badge-light" href="/tag/micrornas/">Micrornas</a>
   
   <a class="badge badge-light" href="/tag/micrornas-genetics/">MicroRNAs: Genetics</a>
   
